chore:resolve dependences conflict